[project]
name = "offchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "eth-account>=0.13.7",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
    "web3>=7.14.0",
]
